Refractor of the Assessment Window and Removal of old legacy items i.e. input folder